{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 15,
  "lineage": "d217bffe-e0cf-9e4f-86a5-ca5e75b467b8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8b3d6b3e415558d",
            "domain": "vpc",
            "id": "eipalloc-0b8b3d6b3e415558d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-205-111-15.compute-1.amazonaws.com",
            "public_ip": "52.205.111.15",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925404979403:internet-gateway/igw-0012ac1890870fc2f",
            "id": "igw-0012ac1890870fc2f",
            "owner_id": "925404979403",
            "vpc_id": "vpc-0c00b8e84b4c2f27d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8b3d6b3e415558d",
            "connectivity_type": "public",
            "id": "nat-0d2b7846f5ae35cb0",
            "subnet_id": "subnet-0cee88bb545137f30"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8b3d6b3e415558d",
            "connectivity_type": "public",
            "id": "nat-0bd770b43c0c10367",
            "network_interface_id": "eni-0818095e07d69b8b4",
            "private_ip": "10.0.20.72",
            "public_ip": "52.205.111.15",
            "subnet_id": "subnet-03f39c0a9cc46cfc2"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925404979403:route-table/rtb-0abb15e86ab7d0da1",
            "id": "rtb-0abb15e86ab7d0da1",
            "owner_id": "925404979403",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0012ac1890870fc2f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c00b8e84b4c2f27d"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925404979403:route-table/rtb-069e4111ea5e8ee9f",
            "id": "rtb-069e4111ea5e8ee9f",
            "owner_id": "925404979403",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0012ac1890870fc2f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c00b8e84b4c2f27d"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privaterta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a5bf0ac2d92d273",
            "route_table_id": "rtb-0abb15e86ab7d0da1",
            "subnet_id": "subnet-035a872bddaf4e142"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.privatert",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c93eb4dc86827b84",
            "route_table_id": "rtb-0abb15e86ab7d0da1",
            "subnet_id": "subnet-09a0373d6ef15e01b"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.privatert",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicrta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084b2b08bef31345b",
            "route_table_id": "rtb-069e4111ea5e8ee9f",
            "subnet_id": "subnet-0cee88bb545137f30"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.publicrt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a3fb7ccb1c97cdc",
            "route_table_id": "rtb-069e4111ea5e8ee9f",
            "subnet_id": "subnet-03f39c0a9cc46cfc2"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.publicrt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925404979403:subnet/subnet-035a872bddaf4e142",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035a872bddaf4e142",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925404979403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c00b8e84b4c2f27d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925404979403:subnet/subnet-09a0373d6ef15e01b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a0373d6ef15e01b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925404979403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c00b8e84b4c2f27d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925404979403:subnet/subnet-0cee88bb545137f30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cee88bb545137f30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925404979403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c00b8e84b4c2f27d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925404979403:subnet/subnet-03f39c0a9cc46cfc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f39c0a9cc46cfc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925404979403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c00b8e84b4c2f27d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925404979403:vpc/vpc-0c00b8e84b4c2f27d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084f66df1bd0a735d",
            "default_route_table_id": "rtb-090d4a0b594f7f010",
            "default_security_group_id": "sg-0a52c05710e80573a",
            "dhcp_options_id": "dopt-0670894c806adc762",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c00b8e84b4c2f27d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-090d4a0b594f7f010",
            "owner_id": "925404979403"
          }
        }
      ]
    }
  ]
}